7-Ingress/1-Deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-angular
  labels:
    app: webapp
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp-angular
        image: kundansingh27feb/webapp-angular:v2
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "0.5m"
            memory: "512Mi"
          limits:
            cpu: "0.6m"
            memory: "600Mi"
