7-Ingress/2-Deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: Deployment-ActiveMQ
  labels:
    queue: activemq
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      queue: activemq
  template:
    metadata:
      labels:
        queue: activemq
      spec:
        containers:
        - name: activemq-queue
          image: kundansingh27feb/active-mq:v1
      ports:
      - containerPort: 8161
      resources:
        requests:
          cpu: "0.5m"
          memory: "256Mi"
        limits:
          cpu: "0.6m"
          memory: "512Mi"
