7-Ingress/1-Deploy_Service-1.yaml
apiVersion: v1
kind: Service 
metadata:
  name: webapp-angular-service
  labels:
    app: webapp-service
spec: 
  selector:
    app: webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
