7-Ingress/2-Deploy_Service-2.yaml
apiVersion: v1
kind: Service 
metadata:
  name: activeMQ-Service
  labels:
    queue: activemq
spec:
  selector:
    queue: activemq
  ports:
  - protocol: TCP
    port: 8161
    targetPort: 8161
  type: ClusterIP
