7-Ingress/1-Deploy_Ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-angular-ingress
spec:
  rules:
  - host: angular.gurukulsiksha.com
    http:
    - paths:
      path: /
      pathType: Prefix
      backend:
        service:
          name: webapp-angular-service
          port:
            number: 80
